Bug fixes, rendering improvement
- Reusing textures between models and textures/ folder now works
- Split "basic" into several render types with more specific use cases
- Actually make atlasing work properly by having multiple UV vertex format elements and baking UV modifiers into built vertex data
- Group draw calls by the underlying texture handle, ignoring the location in the atlas