@@ -14,65 +14,90 @@ import org.jetbrains.annotations.Nullable;
 import org.joml.Vector4f;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Each model part has a render type and a priority for inheritance.
  * FiguraPartRenderer instances will need to figure out how to handle these.
  */
-public record FiguraRenderType(int priority, FiguraShader shader, List<TextureBinding> textureBindings) {
+public class FiguraRenderType {
 
-    // Priority determines rendering order. 0 is the default priority.
-    // Lower priority values will render first, higher priority values render later.
+    // Bundles a texture handle + a UV modifier
+    public record TextureBinding(MinecraftTexture handle, Vector4f uvModifier) {}
 
-    // Create from materials
-    public static FiguraRenderType from(ModuleMaterials.MaterialMaterials mats, List<AvatarTexture> textures, @Nullable AllocationTracker<AvatarOutOfMemoryError> allocTracker) throws AvatarOutOfMemoryError {
+    public final int priority;
+    public final FiguraShader shader;
+    public final List<TextureBinding> textureBindings;
+
+    // Contains only the info needed for draw calls / ordering thereof.
+    // - Notably, it strips UV modifier information, since this is only relevant during vertex rebuild
+    // Fetch one through the .drawCallInfo() method.
+    public record DrawCallInfo(int priority, FiguraShader shader, List<MinecraftTexture> textureHandles) {
+        private DrawCallInfo(FiguraRenderType renderType) {
+            this(
+                    renderType.priority, // Priority needed for ordering
+                    renderType.shader, // Shader needed for drawing
+                    ListUtils.map(renderType.textureBindings, TextureBinding::handle) // Strip the UV modifier, leaving only the handle
+            );
+        }
+    }
+
+    private @Nullable DrawCallInfo drawCallInfo;
+    public DrawCallInfo drawCallInfo() {
+        if (this.drawCallInfo == null)
+            this.drawCallInfo = new DrawCallInfo(this);
+        return this.drawCallInfo;
+    }
+
+    public FiguraRenderType(ModuleMaterials.MaterialMaterials mats, List<AvatarTexture> textures, @Nullable AllocationTracker<AvatarOutOfMemoryError> allocTracker) throws AvatarOutOfMemoryError {
         if (!(mats.shader() instanceof Either.Left(var builtinName))) throw new IllegalStateException("Custom shaders are TODO");
 
-        BuiltinShader shader = switch (builtinName) {
-            case BASIC -> BuiltinShader.BASIC;
+        this.priority = 0;
+
+        this.shader = switch (builtinName) {
+            case ALBEDO -> BuiltinShader.ALBEDO;
+            case ALBEDO_NORMAL -> BuiltinShader.ALBEDO_NORMAL;
+            case ALBEDO_SPECULAR -> BuiltinShader.ALBEDO_SPECULAR;
+            case ALBEDO_NORMAL_SPECULAR -> BuiltinShader.ALBEDO_NORMAL_SPECULAR;
             case END_PORTAL -> BuiltinShader.END_PORTAL;
             case END_GATEWAY -> BuiltinShader.END_GATEWAY;
         };
 
-        List<TextureBinding> textureBindings = new ArrayList<>();
-        for (int i = 0; i < shader.textureBindingPoints.size(); i++) {
-            textureBindings.add(getTextureHelper(ListUtils.getOrNull(mats.textureBindings(), i), textures, shader.defaultBindings().get(i)));
+        this.textureBindings = new ArrayList<>(shader.textureBindingPoints().size());
+
+        for (int i = 0; i < shader.textureBindingPoints().size(); i++) {
+            var binding = ListUtils.getOrNull(mats.textureBindings(), i);
+            switch (binding) {
+                case null -> textureBindings.add(FiguraConnectionPoint.TEXTURE_PROVIDER.getBuiltinTexture(shader.defaultBindings().get(i)));
+                case Either.Left(var builtin) -> textureBindings.add(FiguraConnectionPoint.TEXTURE_PROVIDER.getBuiltinTexture(builtin));
+                case Either.Right(var texIndex) -> {
+                    var texture = textures.get(texIndex);
+                    textureBindings.add(new TextureBinding(texture.getHandle(), texture.getUvValues()));
+                }
+            }
         }
 
-        return new FiguraRenderType(0, shader, textureBindings);
+        assert textureBindings.size() == shader.textureBindingPoints().size();
     }
 
-    // Helper to either get the TextureBinding or use the fallback
-    private static TextureBinding getTextureHelper(@Nullable Either<ModuleMaterials.BuiltinTextureBinding, Integer> binding, List<AvatarTexture> textures, ModuleMaterials.BuiltinTextureBinding fallback) {
-        return switch (binding) {
-            case null -> {
-                var tex = FiguraConnectionPoint.TEXTURE_PROVIDER.getBuiltinTexture(fallback);
-                if (tex == null) yield null;
-                yield new TextureBinding(tex.a(), tex.b());
-            }
-            case Either.Left(var builtin) -> {
-                var tex = FiguraConnectionPoint.TEXTURE_PROVIDER.getBuiltinTexture(builtin);
-                if (tex == null) yield null;
-                yield new TextureBinding(tex.a(), tex.b());
-            }
-            case Either.Right(var texIndex) -> {
-                var tex = textures.get(texIndex);
-                yield new TextureBinding(tex.getHandle(), tex.getUvValues());
-            }
-        };
+    public FiguraRenderType(int priority, FiguraShader shader, List<TextureBinding> textureBindings) {
+        this.priority = priority;
+        this.shader = shader;
+        this.textureBindings = textureBindings;
+
+        assert textureBindings.size() == shader.textureBindingPoints().size();
     }
 
-    // Helper
-    public static FiguraRenderType basic(int priority, @Nullable AvatarTexture main, @Nullable AvatarTexture normal, @Nullable AvatarTexture specular, @Nullable AvatarTexture lightmap) {
-        var mainBinding = main == null ? null : new TextureBinding(main.getHandle(), main.getUvValues());
-        var normalBinding = normal == null ? null : new TextureBinding(normal.getHandle(), normal.getUvValues());
-        var specularBinding = specular == null ? null : new TextureBinding(specular.getHandle(), specular.getUvValues());
-        var lightmapBinding = lightmap == null ? null : new TextureBinding(lightmap.getHandle(), lightmap.getUvValues());
-        return new FiguraRenderType(priority, BuiltinShader.BASIC, Arrays.asList(mainBinding, normalBinding, specularBinding, lightmapBinding));
+    // Helpers
+    public static FiguraRenderType albedo(int priority, AvatarTexture albedo) {
+        return new FiguraRenderType(
+                priority,
+                BuiltinShader.ALBEDO,
+                List.of(
+                        new TextureBinding(albedo.getHandle(), albedo.getUvValues()),
+                        FiguraConnectionPoint.TEXTURE_PROVIDER.getBuiltinTexture(ModuleMaterials.BuiltinTextureBinding.LIGHTMAP)
+                )
+        );
     }
-
-    public record TextureBinding(MinecraftTexture textureHandle, Vector4f uvModifier) {}
 
 }
