@@ -4,22 +4,28 @@ import org.figuramc.figura_core.avatars.errors.AvatarError;
 import org.figuramc.figura_core.avatars.errors.AvatarOutOfMemoryError;
 import org.figuramc.figura_core.minecraft_interop.FiguraConnectionPoint;
 import org.figuramc.figura_core.minecraft_interop.render.PartRenderer;
+import org.figuramc.figura_core.minecraft_interop.texture.MinecraftTexture;
 import org.figuramc.figura_core.model.part.parts.FiguraModelPart;
 import org.figuramc.figura_core.model.part.tasks.RenderTask;
+import org.figuramc.figura_core.model.rendering.shader.FiguraShader;
 import org.figuramc.figura_core.model.rendering.vertex.FiguraVertexElem;
 import org.figuramc.figura_core.model.rendering.vertex.FiguraVertexFormat;
+import org.figuramc.figura_core.util.ListUtils;
 import org.figuramc.figura_core.util.MapUtils;
 import org.figuramc.figura_core.util.data_structures.ByteBufferBuilder;
 import org.figuramc.figura_core.util.data_structures.FiguraTransformStack;
+import org.figuramc.figura_core.util.data_structures.Pair;
 import org.figuramc.figura_translations.Translatable;
 import org.figuramc.figura_translations.TranslatableItems;
 import org.figuramc.memory_tracker.AllocationTracker;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.joml.Vector4f;
 
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.*;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 /**
@@ -32,7 +38,7 @@ public class RenderingRoot<T extends FiguraModelPart> {
     // Compressed vertex data, by format, in native-order byte buffer. Only set after calling rebuildVertices()
     public Map<FiguraVertexFormat, ByteBuffer> builtVertexData = new HashMap<>();
     // Drawcalls, updated whenever rebuildVertices() is run
-    public List<DrawCall> drawCalls = List.of();
+    public List<DrawCall> drawCalls = new ArrayList<>();
     // CPU-side array of transforms, updated whenever calculateTransforms is run
     public PartDataStruct[] transforms = new PartDataStruct[0];
     public int transformCount; // The actual used size of transforms
@@ -56,8 +62,8 @@ public class RenderingRoot<T extends FiguraModelPart> {
         return renderer;
     }
 
-    // Represents a slice of builtVertexData with the given type, start, and length
-    public record DrawCall(FiguraRenderType renderType, int start, int length) {}
+    // Holds a slice of builtVertexData with the given draw call info, starting point, and length
+    public record DrawCall(FiguraRenderType.DrawCallInfo drawCallInfo, int start, int length) {}
 
     // Rebuild this rendering root after making a change that requires it
     // Generally this should run when rendering (because we want to run it on the render thread).
@@ -65,35 +71,49 @@ public class RenderingRoot<T extends FiguraModelPart> {
     // Instead we should invalidate the renderer so it knows to recompute vertices.
     // Also may update the PartDataStruct[] and transformCount
     public void rebuildVertices() throws AvatarOutOfMemoryError, AvatarError {
-        // Map figura render type -> buffer builder
-        Map<FiguraRenderType, ByteBufferBuilder> bufferBuilders = new HashMap<>();
+        // Map draw call info -> buffer builder
+        Map<FiguraRenderType.DrawCallInfo, ByteBufferBuilder> bufferBuilders = new HashMap<>();
+
         // Recursively traverse the part
         int[] nextId = new int[1];
         buildVerticesRecursive(rootPart, bufferBuilders, null, -Integer.MAX_VALUE, nextId);
         transformCount = nextId[0];
-        // Get all the rendertypes and their vertices, sorted by rendertype priority
-        List<Map.Entry<FiguraRenderType, ByteBufferBuilder>> buffers = bufferBuilders.entrySet().stream()
-                .sorted(Comparator.comparing(x -> x.getKey().priority())).toList();
-        // Set up a drawcalls list, one item for each entry
-        drawCalls = new ArrayList<>(buffers.size());
-        // Get vertex buffers grouped by vertex format, and required buffer sizes
-        Map<FiguraVertexFormat, List<ByteBufferBuilder>> byFormat = bufferBuilders.entrySet().stream()
-                .collect(Collectors.groupingBy(e -> e.getKey().shader().vertexFormat(),
-                        Collectors.mapping(Map.Entry::getValue, Collectors.toList())));
-        Map<FiguraVertexFormat, Integer> requiredBufferSizes = MapUtils.mapValues(byFormat, list -> list.stream().mapToInt(ByteBufferBuilder::size).sum());
-        // Remove all prior entries which aren't used anymore or are too small
+
+        // Group draw call infos by priority
+        var byPriority = bufferBuilders.entrySet().stream().collect(Collectors.groupingBy(e -> e.getKey().priority(), TreeMap::new, Collectors.toList()));
+        // Within the same priority, group by shader
+        var byShaderByPriority = MapUtils.mapValues(byPriority, samePriority -> samePriority.stream().collect(Collectors.groupingBy(e -> e.getKey().shader(), HashMap::new, Collectors.toList())));
+
+        // Coalesce to a sorted list of pairs (DrawCallInfo, ByteBufferBuilder)
+        var drawCallInfosAndBufferBuilders = byShaderByPriority.values().stream()
+                .flatMap(map -> map.values().stream())
+                .flatMap(List::stream)
+                .map(Pair::new)
+                .toList();
+
+        // Map vertex format -> list of buffer builders for that format
+        var byFormat = drawCallInfosAndBufferBuilders.stream().collect(
+                Collectors.groupingBy(p -> p.a().shader().vertexFormat(),
+                        Collectors.mapping(Pair::b, Collectors.toList())));
+        // Find the required buffer size for each vertex format
+        var requiredBufferSizes = MapUtils.mapValues(byFormat, builders -> builders.stream().mapToInt(ByteBufferBuilder::size).sum());
+
+        // Remove all ByteBuffer which aren't used anymore or are too small
         builtVertexData.entrySet().removeIf(entry ->
                 !byFormat.containsKey(entry.getKey()) // Not in the new set of formats
                 || entry.getValue().capacity() < requiredBufferSizes.get(entry.getKey()) // Buffer is too small
         );
-        // Rewind any remaining buffers
+
+        // Rewind any buffers that we're reusing
         builtVertexData.values().forEach(ByteBuffer::rewind);
-        // Iterate buffers...
-        for (var entry : buffers) {
-            FiguraRenderType renderType = entry.getKey();
-            ByteBufferBuilder builder = entry.getValue();
-            FiguraVertexFormat format = renderType.shader().vertexFormat();
+
+        // Clear the old set of draw calls, and construct new ones
+        drawCalls.clear();
+        for (var pair : drawCallInfosAndBufferBuilders) {
+            FiguraRenderType.DrawCallInfo drawCallInfo = pair.a();
+            ByteBufferBuilder bufferBuilder = pair.b();
             // Get or create buffer
+            FiguraVertexFormat format = drawCallInfo.shader().vertexFormat();
             @Nullable ByteBuffer buffer = builtVertexData.get(format);
             if (buffer == null) {
                 int size = requiredBufferSizes.get(format);
@@ -101,11 +121,11 @@ public class RenderingRoot<T extends FiguraModelPart> {
                 if (allocationTracker != null) allocationTracker.track(buffer, size);
                 builtVertexData.put(format, buffer);
             }
-            // Put builder data into buffer
+            // Insert the builder's data into the buffer
             int position = buffer.position();
-            builder.writeTo(buffer);
-            // Add a new draw call data.
-            drawCalls.add(new DrawCall(renderType, position, builder.size()));
+            bufferBuilder.writeTo(buffer);
+            // Add a new draw call data to the list!
+            drawCalls.add(new DrawCall(drawCallInfo, position, bufferBuilder.size()));
         }
     }
 
@@ -123,10 +143,10 @@ public class RenderingRoot<T extends FiguraModelPart> {
         }
     }
 
-    // Expensive :( but that's okay
+    // Kinda expensive, but we have to do it
     private void buildVerticesRecursive(
             FiguraModelPart part, // Part to build vertices of
-            Map<FiguraRenderType, ByteBufferBuilder> bufferBuilders, // Mapping from render type -> buffer builders
+            Map<FiguraRenderType.DrawCallInfo, ByteBufferBuilder> bufferBuilders, // Mapping from render type -> buffer builders
             @Nullable FiguraRenderType currentRenderType, // Current render type, if any
             int currentRenderTypePriority, // Parent's render type priority
             int[] currentId // The current ID for vertex weights stuff. Int array for mutability
@@ -150,9 +170,9 @@ public class RenderingRoot<T extends FiguraModelPart> {
             }
             // If it has a rendertype, grab the buffer and add vertices to it
             if (currentRenderType != null) {
-                ByteBufferBuilder buffer = bufferBuilders.computeIfAbsent(currentRenderType, __ -> new ByteBufferBuilder());
+                ByteBufferBuilder buffer = bufferBuilders.computeIfAbsent(currentRenderType.drawCallInfo(), __ -> new ByteBufferBuilder());
                 // Copy any needed items over.
-                FiguraVertexFormat vertexFormat = currentRenderType.shader().vertexFormat();
+                FiguraVertexFormat vertexFormat = currentRenderType.shader.vertexFormat();
                 // For each vertex:
                 for (int i = 0; i < part.vertices.vertexCount; i++) {
                     // For each element of the vertex format, push data for it from this vertex.
@@ -161,16 +181,16 @@ public class RenderingRoot<T extends FiguraModelPart> {
                         while (buffer.size() < start + vertexFormat.offsets[j]) { buffer.push((byte) 0); } // Alignment
                         FiguraVertexElem elem = vertexFormat.elements[j];
                         switch (elem.builtinId) {
-                            case 0 -> buffer
+                            case FiguraVertexElem.POSITION_ID -> buffer
                                     .pushFloat(part.vertices.positions[i*3])
                                     .pushFloat(part.vertices.positions[i*3+1])
                                     .pushFloat(part.vertices.positions[i*3+2]);
-                            case 1 -> buffer
+                            case FiguraVertexElem.RIGGING_WEIGHTS_ID -> buffer
                                     .push(part.vertices.riggingWeights[i*4])
                                     .push(part.vertices.riggingWeights[i*4+1])
                                     .push(part.vertices.riggingWeights[i*4+2])
                                     .push(part.vertices.riggingWeights[i*4+3]);
-                            case 2 -> {
+                            case FiguraVertexElem.RIGGING_INDICES_ID -> {
                                 if (id > 0xFF00) throw new AvatarError(TOO_MANY_GROUPS, TranslatableItems.Items0.INSTANCE);
                                 buffer
                                     .pushUnsignedShort(part.vertices.riggingOffsets[i*4] == -1 ? Character.MAX_VALUE : (char) (id + part.vertices.riggingOffsets[i*4]))
@@ -178,14 +198,20 @@ public class RenderingRoot<T extends FiguraModelPart> {
                                     .pushUnsignedShort(part.vertices.riggingOffsets[i*4+2] == -1 ? Character.MAX_VALUE : (char) (id + part.vertices.riggingOffsets[i*4+2]))
                                     .pushUnsignedShort(part.vertices.riggingOffsets[i*4+3] == -1 ? Character.MAX_VALUE : (char) (id + part.vertices.riggingOffsets[i*4+3]));
                             }
-                            case 3 -> buffer
-                                    .pushFloat(part.vertices.uvs[i*2])
-                                    .pushFloat(part.vertices.uvs[i*2+1]);
-                            case 4 -> buffer
+                            case FiguraVertexElem.UV0_ID, FiguraVertexElem.UV1_ID, FiguraVertexElem.UV2_ID, FiguraVertexElem.UV3_ID -> {
+                                float u = part.vertices.uvs[i*2];
+                                float v = part.vertices.uvs[i*2+1];
+                                int uvIndex = elem.builtinId - FiguraVertexElem.UV0_ID; // Offset from UV0
+                                Vector4f uvModifier = currentRenderType.textureBindings.get(uvIndex).uvModifier();
+                                u = u * uvModifier.z + uvModifier.x;
+                                v = v * uvModifier.w + uvModifier.y;
+                                buffer.pushFloat(u).pushFloat(v);
+                            }
+                            case FiguraVertexElem.NORMAL_ID -> buffer
                                     .push(part.vertices.normals[i*3])
                                     .push(part.vertices.normals[i*3+1])
                                     .push(part.vertices.normals[i*3+2]);
-                            case 5 -> buffer
+                            case FiguraVertexElem.TANGENT_ID -> buffer
                                     .push(part.vertices.tangents[i*3])
                                     .push(part.vertices.tangents[i*3+1])
                                     .push(part.vertices.tangents[i*3+2]);
